objects/TASKRAY__trPendingInterview__c.object
<CustomObject>
    <fields>
        <fullName>TASKRAY__trCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trFlowLabel__c</fullName>
        <label>Flow Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trFlowUniqueName__c</fullName>
        <label>Flow Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trInterviewDate__c</fullName>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TaskRay Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>TaskRay Pending Interviews</relationshipLabel>
        <relationshipName>TaskRay_Pending_Interviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TaskRay Task</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>TaskRay Pending Interviews</relationshipLabel>
        <relationshipName>TaskRay_Pending_Interviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TaskRay Pending Action</label>
    <nameField>
        <label>TaskRay Pending Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Pending Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>